--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -107,6 +107,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Convertor\BoolToArrowConvertor.cs" />
+    <Compile Include="Model\CourseSeriesModel.cs" />
+    <Compile Include="Model\SeriesModel.cs" />
     <Compile Include="ViewModel\FirstPageViewModel.cs" />
     <Compile Include="View\SecondPageView.xaml.cs">
       <DependentUpon>SecondPageView.xaml</DependentUpon>
