--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -7,10 +7,12 @@
   <package id="K4os.Hash.xxHash" version="1.0.6" targetFramework="net472" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
+  <package id="MoonPdfLib-x86" version="0.3.0" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.22" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
+  <package id="WPFPdfViewer" version="1.0.0" targetFramework="net472" />
 </packages>
